--- a/Wiki.Net/Wiki.Net.csproj
+++ b/Wiki.Net/Wiki.Net.csproj
@@ -10,6 +10,7 @@
         <PackageTags>wiki, wikipedia, API</PackageTags>
         <PackageLicenseUrl>https://github.com/Creepysin-Studios/Wiki.Net/blob/master/LICENSE</PackageLicenseUrl>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageVersion>2.0.0</PackageVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
