--- a/Wiki.Net/Wiki.Net.csproj
+++ b/Wiki.Net/Wiki.Net.csproj
@@ -5,17 +5,19 @@
     <RootNamespace>CreepysinStudios.WikiDotNet</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>Wiki.Net</Title>
-    <Authors>Creepysin; EternalClickbait; HelloHowIsItGoing</Authors>
-    <RepositoryUrl>https://github.com/Creepysin-Studios/Wiki.Net</RepositoryUrl>
+    <Authors>Voltstro; EternalClickbait; HelloHowIsItGoing</Authors>
+    <RepositoryUrl>https://github.com/Voltstro-Studios/Wiki.Net</RepositoryUrl>
     <PackageTags>wiki, wikipedia, wikipedia-api, API, unofficial, dotnet</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageVersion>2.1.0</PackageVersion>
-    <Description>Wiki.Net - Wiki.Net – An unofficial C# Wikipedia API</Description>
+    <Description>Wiki.Net – An unofficial C# Wikipedia API</Description>
     <Version>2.1.0</Version>
-    <Company>Creepysin-Studios</Company>
-    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <Copyright>Copyright © Creepysin-Studios 2020</Copyright>
-    <PackageProjectUrl>https://wikinet.studios.creepysin.com/</PackageProjectUrl>
+    <Company>Voltstro-Studios</Company>
+    <PackageLicenseFile></PackageLicenseFile>
+    <Copyright>Copyright © Voltstro-Studios 2020</Copyright>
+    <PackageProjectUrl>https://wikinet.voltstro.dev</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>Github</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -31,10 +33,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\LICENSE.md">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
     <None Include="..\README.md">
       <Link>README.md</Link>
     </None>
