Moved all code intro src/ folder
Changed namespace from CreepysinStudios.WikiDotNet to WikiDotNet

--- a/src/Wiki.Net.Example/Wiki.Net.Example.csproj
+++ b/src/Wiki.Net.Example/Wiki.Net.Example.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.2</TargetFramework>
-        <RootNamespace>CreepysinStudios.WikiDotNet.Example</RootNamespace>
+        <RootNamespace>WikiDotNet.Example</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
