--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>CreepysinStudios.WikiDotNet</RootNamespace>
+    <RootNamespace>WikiDotNet</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>Wiki.Net</Title>
     <Authors>Voltstro; EternalClickbait; HelloHowIsItGoing</Authors>
@@ -30,12 +30,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\README.md">
-      <Link>README.md</Link>
-    </None>
   </ItemGroup>
 
 </Project>
