--- a/src/Wiki.Net.Example/Wiki.Net.Example.csproj
+++ b/src/Wiki.Net.Example/Wiki.Net.Example.csproj
@@ -4,6 +4,12 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>WikiDotNet.Example</RootNamespace>
+        <Authors>Voltstro; EternalClickbait</Authors>
+        <Version>2.0.0</Version>
+        <Company>Voltstro-Studios</Company>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Description>An example for Wiki.Net</Description>
+        <Copyright>Copyright © Voltstro-Studios 2020</Copyright>
     </PropertyGroup>
 
   <ItemGroup>
