--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,25 @@
-# .NET Desktop
-# Build and run tests for .NET Desktop or Windows classic desktop solutions.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
-
 trigger:
 - Stable
 - Development
 
-pool:
-  vmImage: 'windows-latest'
-
 variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-steps:
-- task: NuGetToolInstaller@1
+jobs:
+- job: Windows
+  pool:
+    vmImage: 'windows-2019'
+  steps:
+  - template: azure/build.yml
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-18.04'
+  steps:
+  - template: azure/build.yml
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+- job: MacOS
+  pool:
+    vmImage: 'macOS-10.15'
+  steps:
+  - template: azure/build.yml
