--- a/src/Wiki.Net.Example/Wiki.Net.Example.csproj
+++ b/src/Wiki.Net.Example/Wiki.Net.Example.csproj
@@ -2,9 +2,9 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>WikiDotNet.Example</RootNamespace>
-        <Authors>Voltstro; EternalClickbait</Authors>
+        <Authors>Voltstro;EternalClickbait</Authors>
         <Version>2.0.0</Version>
         <Company>Voltstro-Studios</Company>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
