--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -13,7 +13,7 @@
     <Description>Wiki.Net – An unofficial C# Wikipedia API</Description>
     <Version>3.0.0</Version>
     <Company>Voltstro-Studios</Company>
-    <Copyright>Copyright © Voltstro-Studios 2020</Copyright>
+    <Copyright>Copyright © Voltstro-Studios 2019-2021</Copyright>
     <PackageProjectUrl>https://wikinet.voltstro.dev</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>Github</RepositoryType>
