--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -4,23 +4,24 @@
     <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
     <RootNamespace>WikiDotNet</RootNamespace>
     <Title>Wiki.Net</Title>
-    <Authors>Voltstro;EternalClickbait;</Authors>
+    <Authors>Voltstro;EternalClickbait</Authors>
     <RepositoryUrl>https://github.com/Voltstro-Studios/Wiki.Net</RepositoryUrl>
     <PackageTags>wiki, wikipedia, wikipedia-api, API, unofficial, dotnet, dotnetstandard, csharp</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>3.0.0</PackageVersion>
     <Description>Wiki.Net – An unofficial C# Wikipedia API</Description>
-    <Version>3.0.0</Version>
+    <Version>3.1.0</Version>
+    <PackageVersion>3.1.0</PackageVersion>
     <Company>Voltstro-Studios</Company>
     <Copyright>Copyright © Voltstro-Studios 2019-2021</Copyright>
     <PackageProjectUrl>https://wikinet.voltstro.dev</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>Github</RepositoryType>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Release notes for 3.0.0:
-* BREAKING: Changed namespace from `CreepysinStudios.WikiDotNet` to `WikiDotNet`
-* Updated package details
-* Added possibility to define wiki language (PR by JayJay1989)</PackageReleaseNotes>
+    <PackageReleaseNotes>Release notes for 3.1.0:
+      * Fix Language property not being set correctly
+      * Support .NET 5
+      * Update Newtonsoft.Json to 13.0.1
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
