--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,6 +1,6 @@
 - name: Guides
   href: guides/
   homepage: guides/index.md
-- name: Api Documentation
+- name: API Documentation
   href: api/
   homepage: api/index.md
