--- a/src/Wiki.Net.Example/Wiki.Net.Example.csproj
+++ b/src/Wiki.Net.Example/Wiki.Net.Example.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>WikiDotNet.Example</RootNamespace>
         <Authors>Voltstro;EternalClickbait</Authors>
         <Version>2.0.0</Version>
         <Company>Voltstro-Studios</Company>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Description>An example for Wiki.Net</Description>
-        <Copyright>Copyright © Voltstro-Studios 2019-2021</Copyright>
+        <Copyright>Copyright (c) Voltstro-Studios 2019-2022</Copyright>
     </PropertyGroup>
 
   <ItemGroup>
