WikiSearcher is no longer static
* Remove proxy options, this can be set by passing a HttpClient on WikiSearcher instantiation
* Enable nullable
* WikiSearcher formats URL using string.format

--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -22,6 +22,8 @@
       * Support .NET 5
       * Update Newtonsoft.Json to 13.0.1
     </PackageReleaseNotes>
+    <LangVersion>10</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
