--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,21 +6,25 @@ pr:
 variables:
   buildConfiguration: 'Release'
 
-jobs:
-- job: Windows
-  pool:
-    vmImage: 'windows-latest'
-  steps:
-  - template: azure/build.yml
+pool:
+  vmImage: ubuntu-latest
 
-- job: Linux
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - template: azure/build.yml
+steps:
+- checkout: self
+  submodules: true
 
-- job: MacOS
-  pool:
-    vmImage: 'macOS-latest'
-  steps:
-  - template: azure/build.yml
+- task: UseDotNet@2
+  displayName: Install .NET
+  inputs:
+    version: 6.0.x
+
+- script: dotnet restore -v minimal src/Wiki.Net.sln
+  displayName: Restore Packages
+
+- script: dotnet build src/Wiki.Net.sln --no-restore -v minimal -c $(buildConfiguration)
+  displayName: Build Project
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: src/Packaging/bin
+    artifactName: NuGet-Packages
