--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,9 +1,3 @@
-###############
-#    folder   #
-###############
-/**/DROP/
-/**/TEMP/
-/**/packages/
-/**/bin/
-/**/obj/
-_site
+_site/
+obj/
+api/
