--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -4,22 +4,18 @@
         <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
         <RootNamespace>WikiDotNet</RootNamespace>
         <Title>Wiki.Net</Title>
-        <Authors>Voltstro;EternalClickbait</Authors>
+        <Authors>Voltstro;Ararem</Authors>
         <PackageTags>wiki, wikipedia, wikipedia-api, API, unofficial, dotnet, dotnetstandard, csharp</PackageTags>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <Description>Wiki.Net – An unofficial C# Wikipedia API</Description>
-        <Version>3.1.0</Version>
-        <PackageVersion>3.1.0</PackageVersion>
+        <Version>4.0.0</Version>
+        <PackageVersion>4.0.0</PackageVersion>
         <Company>Voltstro-Studios</Company>
         <Copyright>Copyright (c) Voltstro-Studios 2019-2022</Copyright>
-        <PackageProjectUrl>https://wikinet.voltstro.dev</PackageProjectUrl>
+        <PackageProjectUrl>https://projects.voltstro.dev/WikiNet/</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageIcon>icon.png</PackageIcon>
-        <PackageReleaseNotes>Release notes for 3.1.0:
-            * Fix Language property not being set correctly
-            * Support .NET 5
-            * Update Newtonsoft.Json to 13.0.1
-        </PackageReleaseNotes>
+        <PackageReleaseNotes>See https://projects.voltstro.dev/WikiNet/changelog/ for changelog.</PackageReleaseNotes>
         <LangVersion>10</LangVersion>
         <Nullable>enable</Nullable>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
