Cleanup csproj Update slogan Include README in package

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -2,7 +2,7 @@
 hero:
   title: Wiki.Net
   description: |
-    An unofficial C# Wikipedia API
+    Wiki.Net – An unofficial .NET Wikipedia API wrapper
   actions:
   - name: Get Started
     href: articles/index.md
