--- a/docs/menu.yml
+++ b/docs/menu.yml
@@ -4,7 +4,7 @@ items:
   href: articles/index.md
 
 - name: API Documentation
-  href: api/WikiDotNet.yml
+  href: api/index.md
 
 - name: Changelog
   href: changelog/
