--- a/docs/index.yml
+++ b/docs/index.yml
@@ -6,3 +6,33 @@ hero:
   actions:
   - name: Get Started
     href: articles/index.md
+
+quickstart:
+- title: Install Wiki.Net
+  content: |
+    Add to your project's `csproj`.
+
+    ```xml
+    <ItemGroup>
+      <PackageReference Include="Wiki.Net" Version="4.1.0"/>
+    </ItemGroup>
+    ```
+    
+- title: And Start Using!
+  content: |
+    ```csharp
+    string searchString = "Computer";
+    WikiSearcher searcher = new();
+    WikiSearchSettings searchSettings = new() {RequestId = "Request ID", ResultLimit = 5, ResultOffset = 2, Language = "en"};
+
+    WikiSearchResponse response = searcher.Search(searchString, searchSettings);
+
+    Console.WriteLine($"\nResults found ({searchString}):\n");
+    foreach (WikiSearchResult result in response.Query.SearchResults)
+    {
+      Console.WriteLine(
+                    $"\t{result.Title} ({result.WordCount} words, {result.Size} bytes, id {result.PageId}):\t{result.Preview}...\n\tAt {result.Url.AbsoluteUri} and {result.ConstantUrl.AbsoluteUri}\n\tLast edited at {result.LastEdited}\n");
+    }
+
+    Console.ReadLine();
+    ```
