--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net6.0;netstandard2.0</TargetFrameworks>
         <RootNamespace>WikiDotNet</RootNamespace>
         <LangVersion>10</LangVersion>
         <Nullable>enable</Nullable>
         <Title>Wiki.Net</Title>
         <Authors>Voltstro;Ararem</Authors>
        
-        <Version>4.1.0</Version>
-        <PackageVersion>4.1.0</PackageVersion>
+        <Version>4.1.1</Version>
+        <PackageVersion>4.1.1</PackageVersion>
         
         <Company>Voltstro-Studios</Company>
-        <Copyright>Copyright (c) Voltstro-Studios 2019-2022</Copyright>
+        <Copyright>Copyright (c) Voltstro-Studios 2019-2024</Copyright>
 
         <DocumentationFile>bin\$(Configuration)\Wiki.Net.xml</DocumentationFile>
         
@@ -41,8 +41,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
