--- a/src/Wiki.Net/Wiki.Net.csproj
+++ b/src/Wiki.Net/Wiki.Net.csproj
@@ -7,9 +7,6 @@
         <Nullable>enable</Nullable>
         <Title>Wiki.Net</Title>
         <Authors>Voltstro;Ararem</Authors>
-       
-        <Version>4.1.1</Version>
-        <PackageVersion>4.1.1</PackageVersion>
         
         <Company>Voltstro-Studios</Company>
         <Copyright>Copyright (c) Voltstro-Studios 2019-2024</Copyright>
@@ -41,6 +38,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Nerdbank.GitVersioning" Version="3.8.118">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     </ItemGroup>
