Update docs Update Newtonsoft.Json Bump copyright

--- a/docs/articles/toc.yml
+++ b/docs/articles/toc.yml
@@ -1,4 +1,8 @@
 - name: Articles
   href: index.md
-- name: Basic Example
-  href: basic-example.md
+- name: Setup
+  href: setup.md
+- name: User Agent
+  href: useragent.md
+- name: Upgrading
+  href: upgrading.md
